# kapybara

./: README.md  main.py  pyproject.toml
kapybara/: __init__.py
kapybara/browserlib/: __init__.py  custom_browser.py
kapybara/common/: __init__.py  envWrite.py
